<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	style="@style/TTWindowStyle">
	<LinearLayout
		android:layout_width="fill_parent"
		android:orientation="vertical"
		android:id="@+id/LinearLayout01"
		android:layout_height="wrap_content">
		<ImageView
			android:background="@drawable/header"
			android:src="@drawable/full_logo"
			android:layout_width="fill_parent"
			android:id="@+id/img_header_logo"
			android:layout_height="wrap_content"></ImageView>
		<ImageView
			android:background="@drawable/separator"
			android:src="@drawable/separator"
			android:layout_width="fill_parent"
			android:id="@+id/img_header_line"
			android:layout_height="2px"></ImageView>
	</LinearLayout>
	<LinearLayout
		android:id="@+id/LinearLayout02"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:padding="15px" android:layout_width="fill_parent">
		<TextView
			android:layout_height="wrap_content"
			android:text="@string/lblUsername"
			android:paddingBottom="5px"
			android:layout_width="wrap_content" android:id="@+id/lbl_credentials_username"></TextView>
		<EditText
			android:layout_width="match_parent"
			android:bufferType="normal"
			android:singleLine="true"
			android:layout_height="wrap_content"
			android:id="@+id/txt_credentials_username" android:lines="1"></EditText>
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/lblPassword"
			android:paddingBottom="5px" android:id="@+id/lbl_credentials_password"></TextView>
		<EditText
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:password="true" android:id="@+id/txt_credentials_password"></EditText>
		<Button
			android:layout_height="wrap_content"
			android:layout_marginTop="10px"
			android:paddingLeft="50px"
			android:paddingRight="50px" android:text="Login" android:id="@+id/btn_credentials_login" android:layout_width="fill_parent"></Button>
		<RelativeLayout
			android:id="@+id/RelativeLayout01"
			android:layout_height="fill_parent"
			android:layout_width="fill_parent">
			<Button
				android:layout_alignParentBottom="true"
				android:layout_height="wrap_content"
				android:text="@string/btnRegister"
				android:layout_width="match_parent" android:id="@+id/btn_credentials_register"></Button>
		</RelativeLayout>
	</LinearLayout>
</LinearLayout>